[metadata]
name = sphinxcontrib-docbookrestapi
author = Cyril Roelandt
author-email = cyril.roelandt@enovance.com
summary = Extension to Sphinx for generating REST API documentation for http://api.openstack.org/
description-file = README.rst
license = Apache-2
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Topic :: Software Development :: Documentation
keywords =
    documentation
    docbook
    sphinx
version=0.2

[files]
packages = 
    sphinxcontrib
    sphinxcontrib.docbookrestapi
namespace_packages =
    sphinxcontrib
